fix: fixed searchbar oveflow on mobile

--- a/src/app/features/home/user-navbar/navbar.component.scss
+++ b/src/app/features/home/user-navbar/navbar.component.scss
@@ -126,6 +126,10 @@
 }
 
 @media only screen and (max-width: 480px) {
+  .nav-bar__wrapper {
+    margin-bottom: 56px;
+  }
+
   .nav-menu {
     transform: translateY(110px);
   }
